Added HW problem to SVD chapter

--- a/t24_singular_value_decomposition.ipynb
+++ b/t24_singular_value_decomposition.ipynb
@@ -13,6 +13,8 @@
    "source": [
     "# Topic 24.  Singular Value Decomposition\n",
     "Author: Brendon Forsgren (bforsgren29@gmail.com)\n",
+    "\n",
+    "Text recognition HW problem: Jon Knight (jknight7027@yahoo.com)\n",
     "    "
    ]
   },
@@ -537,27 +539,92 @@
    "source": [
     "The results of the code are pretty cool. From the first plot we can see that about 80% of the information is encoded in the first 20% of the singular values. Also we can see from the images that it is hard to notice a lack of detail in the images until less than 100 singular values are used and the quality of the images only starts decreasing rapidly when less than 50 singular values are used."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Homework Problem\n",
+    "\n",
+    "### Background\n",
+    "Another application of SVD is text classification. As in the example above, the SVD contains information about an image. Information on the structure of a character can be found by computing the SVD of training data. This information is then compared to an image of character to which character it is. This is a strategy used for OCR (optical character recognition) in the real world, for example, reading the post code on envelopes. The following exercise will guide you through a simple example of character recognition.\n",
+    "\n",
+    "\n",
+    "### Other information\n",
+    "The .mat file below contains a few matrices used for this exercise. Each column of the matrices number6training, number6testing, and allnumstesting all contain 256 pixel values rearranged from a 16x16 pixel image of a handwritten character. The images contained in number6training and number6testing are of the numeral '6'. The matrix allnumstesting contains images for all digits 0-9. The vector allnumsindex contains which number is in the corresponding column of allnumstesting. Use the first few singular vectors from the SVD of number6training to form a set of basis vectors. Use these basis vectors to classify whether characters from number6testing and allnumstesting are a 6 or not. (Hint: the error of a least squares approximation can determine how well the image fits the basis vectors.\n",
+    "\n",
+    "### .mat file:\n",
+    "[textrecognition.mat](files/textrecognition.mat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Starter code\n",
+    "import numpy as np\n",
+    "import scipy.io as sio\n",
+    "\n",
+    "##Load .mat contents into variables\n",
+    "mat_contents = sio.loadmat('textrecognition.mat')\n",
+    "A = mat_contents['number6training'];\n",
+    "B = mat_contents['number6testing'];\n",
+    "allnums = mat_contents['allnumstesting'];\n",
+    "allindex = mat_contents['allnumsindex'];\n",
+    "\n",
+    "U, S, V = np.linalg.svd(A);\n",
+    "\n",
+    "#Your code here\n",
+    "#First form a set of basis vectors from the singular vectors\n",
+    "#Then compare images to this set of basis vectors (Hint: use error vector of least squares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Helper function to display a column vector as an image\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "#Takes a vector of length 256 and displays as 16x16 image\n",
+    "def showimage(image):\n",
+    "    image = image.reshape(16,16);\n",
+    "    plt.imshow(image);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notes\n",
+    "Some of the characters will probably be classified wrong. Some of the characters are written badly and so will wrongly fall above or below the chosen threshold for the error.\n",
+    "A more complete implementation of character recognition would find basis vectors for each numeral and find which set of basis vectors fit an image the best. This can be left as a further exercise for those interested."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
